--- a/generator/edit.html
+++ b/generator/edit.html
@@ -134,7 +134,7 @@
                             </span>
                         </button>
 
-                        <button id="show-modal-qr" type="button" class="open-button | button"
+                        <!-- <button id="show-modal-qr" type="button" class="open-button | button"
                             title="Show QR: scan this code to open the page on another device">
                             <span class="icon small-padding">
                                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1.1"
@@ -142,7 +142,7 @@
                                     <use href="#icon-qr"></use>
                                 </svg>
                             </span>
-                        </button>
+                        </button> -->
 
                     </div>
 
@@ -381,11 +381,11 @@
                 d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z">
             </path>
         </symbol>
-        <symbol id="icon-qr">
+        <!-- <symbol id="icon-qr">
             <path
                 d="M5 1h-4v4h4v-4zM6 0v0 6h-6v-6h6zM2 2h2v2h-2zM15 1h-4v4h4v-4zM16 0v0 6h-6v-6h6zM12 2h2v2h-2zM5 11h-4v4h4v-4zM6 10v0 6h-6v-6h6zM2 12h2v2h-2zM7 0h1v1h-1zM8 1h1v1h-1zM7 2h1v1h-1zM8 3h1v1h-1zM7 4h1v1h-1zM8 5h1v1h-1zM7 6h1v1h-1zM7 8h1v1h-1zM8 9h1v1h-1zM7 10h1v1h-1zM8 11h1v1h-1zM7 12h1v1h-1zM8 13h1v1h-1zM7 14h1v1h-1zM8 15h1v1h-1zM15 8h1v1h-1zM1 8h1v1h-1zM2 7h1v1h-1zM0 7h1v1h-1zM4 7h1v1h-1zM5 8h1v1h-1zM6 7h1v1h-1zM9 8h1v1h-1zM10 7h1v1h-1zM11 8h1v1h-1zM12 7h1v1h-1zM13 8h1v1h-1zM14 7h1v1h-1zM15 10h1v1h-1zM9 10h1v1h-1zM10 9h1v1h-1zM11 10h1v1h-1zM13 10h1v1h-1zM14 9h1v1h-1zM15 12h1v1h-1zM9 12h1v1h-1zM10 11h1v1h-1zM12 11h1v1h-1zM13 12h1v1h-1zM14 11h1v1h-1zM15 14h1v1h-1zM10 13h1v1h-1zM11 14h1v1h-1zM12 13h1v1h-1zM13 14h1v1h-1zM10 15h1v1h-1zM12 15h1v1h-1zM14 15h1v1h-1z">
             </path>
-        </symbol>
+        </symbol> -->
         <symbol id="icon-preview">
             <path
                 d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 0 0 0 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z">
@@ -407,12 +407,12 @@
     </dialog>
 
     <!-- QR modal -->
-    <dialog class="modal flow" id="modal-qr">
+    <!-- <dialog class="modal flow" id="modal-qr">
         <div class="qr-code-container">
             <button id="close-modal-qr" class="close-button button" aria-label="close" type="button"></button>
             <canvas id="generator-qr-code"></canvas>
         </div>
-    </dialog>
+    </dialog> -->
 
 </body>
 
