Fix formatting in edit.html

--- a/generator/edit.html
+++ b/generator/edit.html
@@ -276,7 +276,7 @@
                                     <b style="font-weight: 600;">
                                         data will be deleted
                                     </b> 
-                                    and replaced with default content.
+                                    and replaced with default&nbsp;content.
                                 </p>
                             </small>
                             <div>
