Refactor reset data panel in edit.html

--- a/generator/edit.html
+++ b/generator/edit.html
@@ -268,31 +268,27 @@
                     <summary>
                         Reset data
                     </summary>
-                    <div class="panel">
-                        <div class="flow">
-                            <small>
-                                <p>
-                                    Local browser 
-                                    <b style="font-weight: 600;">
-                                        data will be deleted
-                                    </b> 
-                                    and replaced with default&nbsp;content.
-                                </p>
-                            </small>
-                            <div>
-                                <button id="clear-local-storage" type="button" 
-                                class="button danger size-300">
-                                    <span>Reset data</span>
-                                    <span class="icon">
-                                        <svg stroke="currentColor" fill="currentColor" stroke-width="0"
-                                            viewBox="0 0 24 24" height="1em" width="1em"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <use href="#icon-delete"></use>
-                                        </svg>
-                                    </span>
-                                </button>
-                            </div>
+                    <div class="panel" style="display: flex;align-items: center;gap: 1rem;">
+                    
+                        <div>
+                            <button id="clear-local-storage" type="button" class="button danger size-300" style="white-space: nowrap;">
+                                <span>Reset</span>
+                                <span class="icon">
+                                    <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em"
+                                        width="1em" xmlns="http://www.w3.org/2000/svg">
+                                        <use href="#icon-delete"></use>
+                                    </svg>
+                                </span>
+                            </button>
                         </div>
+                        <small>
+                            <b style="font-weight: 600;">
+                                Local browser
+                                data will be deleted
+                            </b>
+                            and replaced with default&nbsp;content.
+                        </small>
+                    
                     </div>
                 </details>
 
