Update styles and content

--- a/generator/edit.html
+++ b/generator/edit.html
@@ -227,7 +227,7 @@
                                 <footer class="repeater-info">
                                     <small class="">
                                         Complete both fields above to 
-                                        <strong style="white-space: nowrap;">add a new item</strong>
+                                        <strong style="white-space: nowrap;">add a new shortcode</strong>
                                     </small>
                                 </footer>
                             </article>
@@ -246,19 +246,24 @@
                         </footer>
 
                         <hr style="width: 100%; opacity: .5; margin: 0;">
-                        <small style="columns: 2;">
-                            <strong>
-                                Shortcodes
-                            </strong> 
-                            are concise snippets, 
-                            conventionally enclosed in square brackets, such as <i>[price]</i>.
-                            <br>
-                            <strong>
-                                They get 
-                                automatically replaced 
-                            </strong>
-                            with the actual value, e.g: <i>$1000</i>.
-                        </small>
+                        <details class="flow panel">
+                            <summary style="color: inherit; padding: 0; opacity: .75;">
+                                <small>
+                                    What is a shortcode?
+                                </small>
+                            </summary>
+                            <small>
+                                <p>
+                                    Shortcodes are concise snippets, 
+                                    conventionally enclosed in square brackets, such as <i>[price]</i>.
+                                </p>
+                                <p>
+                                    They get automatically replaced 
+                                    with the actual value, e.g: <i>$1000</i>
+                                    when a contract is generated.
+                                </p>
+                            </small>
+                        </details>
 
                     </form>
                 </details>
@@ -282,11 +287,13 @@
                             </button>
                         </div>
                         <small>
-                            <b style="font-weight: 600;">
-                                Local browser
-                                data will be deleted
-                            </b>
-                            and replaced with default&nbsp;content.
+                            <span>
+                                <b>
+                                    Local browser
+                                    data will be deleted
+                                </b>
+                                and replaced with default&nbsp;content.
+                            </span>
                         </small>
                     
                     </div>
