Add margin to download button

--- a/generator/edit.html
+++ b/generator/edit.html
@@ -321,7 +321,9 @@
                 </div>
                 <!-- Download Button -->
                 <div class="flexi">
-                    <button id="download" type="submit" class="button primary size-300 | animate slide delay-4">
+                    <button id="download" type="submit" 
+                    style="margin-inline-start: 2px;"
+                    class="button primary size-300 | animate slide delay-4">
                         <span>Download</span>
                         <span class="icon">
                             <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24"
