Refactor CSS styles (forms and repeater close-button) and add headings

--- a/generator/edit.html
+++ b/generator/edit.html
@@ -155,6 +155,8 @@
 
             <div class="generator-main-options flow">
 
+                <h3>Optional Contract Settings</h3>
+
                 <!-- Name fields -->
                 <details class="animate slide delay-1">
                     <summary>
@@ -252,17 +254,17 @@
                                     What is a shortcode?
                                 </small>
                             </summary>
-                            <small>
+                            <div class="flow">
                                 <p>
-                                    Shortcodes are concise snippets, 
+                                    Shortcodes are concise snippets,
                                     conventionally enclosed in square brackets, such as <i>[price]</i>.
                                 </p>
                                 <p>
-                                    They get automatically replaced 
+                                    They get automatically replaced
                                     with the actual value, e.g: <i>$1000</i>
                                     when a contract is generated.
                                 </p>
-                            </small>
+                            </div>
                         </details>
 
                     </form>
@@ -276,8 +278,8 @@
                     <div class="panel" style="display: flex;align-items: center;gap: 1rem;">
                     
                         <div>
-                            <button id="clear-local-storage" type="button" class="button danger size-500" style="white-space: nowrap;">
-                                <span>Reset</span>
+                            <button id="clear-local-storage" type="button" class="button danger size-300" style="white-space: nowrap;">
+                                <span>Reset data</span>
                                 <span class="icon">
                                     <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em"
                                         width="1em" xmlns="http://www.w3.org/2000/svg">
@@ -302,6 +304,8 @@
             </div>
 
             <form class="generator-download-options sticky-1 flow | animate slide delay-0" id="download-form" name="download-form">
+
+                <h3>Download File</h3>
 
                 <!-- Filename field -->
                 <div class="flexi">
