--- a/generator/edit.html
+++ b/generator/edit.html
@@ -279,7 +279,7 @@
                     
                         <div>
                             <button id="clear-local-storage" type="button" class="button danger size-300" style="white-space: nowrap;">
-                                <span>Reset data</span>
+                                <span>Reset <span class="hide-small">data</span></span>
                                 <span class="icon">
                                     <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em"
                                         width="1em" xmlns="http://www.w3.org/2000/svg">
